# pum-practice4

backend/: .dockerignore  data.db  main.py  main2.py  model.ai  moves.json  pyproject.toml
backend/src/: __init__.py
backend/src/game/: AI.py  MarketState.py  Player.py  Session.py
backend/src/server/: Database.py  REST.py  WebSockets.py
backend/src/server/sessions/: Lobby.py  LobbyHub.py  SessionHub.py
frontend/: README.md  nuxt.config.js  package.json  tailwind.config.js
frontend/assets/css/: main.pcss
frontend/components/: ChatMessage.vue  UserAvatar.vue
frontend/kb_client/: Events.ts  KbClient.ts
frontend/kb_client/models/: Player.ts  Session.ts
frontend/layouts/: default.vue
frontend/pages/: game.vue  index.vue  join.vue  lobby.vue  login.vue  register.vue  scoreboard.vue
frontend/plugins/: gamePlugin.ts  veevalidatePlugin.ts
