[tool.poetry]
name = "pum_practice4"
version = "0.1.0"
description = ""
authors = ["AlexeyZavar <sltkval1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-SocketIO = "^5.1.1"
eventlet = "^0.33.0"
SQLAlchemy = "^1.4.29"
Flask-JWT-Extended = "^4.3.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
